fixed socials spacing

--- a/style.css
+++ b/style.css
@@ -457,7 +457,7 @@ a.first_link,
 }
 
 .socials {
-    margin-top: 1em;
+    margin-top: 2em;
     display: flex;
     column-gap: 1em;
 }
